# QChat

./: .gitignore  README.md
QChatServer/: CMakeLists.txt
QChatServer/QChatServer/: CMakeLists.txt  DBHelper.cpp  DBHelper.h  QChatServer.cpp  QChatServer.h  SelectServer.cpp  SelectServer.h
src/: QChat.pro  localaddressinfo.cpp  localaddressinfo.h  localaddressinfo.ui  main.cpp  packet.cpp  packet.h  widget.cpp  widget.h  widget.ui
